<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/grad_main_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/infinite_android_mentoring"
        style="@style/TextViewMediumWhite"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvForm"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/TextViewMediumBlue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/TextViewSmallBlue"
                app:layout_constraintTop_toBottomOf="@id/textLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/state_edit_main"
                android:inputType="textEmailAddress"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/TextViewSmallBlue"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"/>
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/tvPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/state_edit_main"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/tvForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                style="@style/TextViewSmallBlue"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"/>
            <Button
                android:id="@+id/btLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvForget"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/login"
                style="@style/TextViewSmallWhite"
                android:background="@drawable/state_button_main"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_sign_up"
                style="@style/TextViewSmallBlue"
                app:layout_constraintTop_toBottomOf="@id/btLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>